tests/fixtures/invalid/pow_dict_int.py
# Cannot call pow() with Dict[str, int], Int
x = pow({"a": 1}, 1)
